--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,10 +32,10 @@
   "PAGE_HOME_WELCOME_GREETINGS": "Nice that you're here!",
   "PAGE_HOME_TOTAL_BREW": "Brew",
   "PAGE_HOME_TOTAL_BREWS": "Brews",
-  "PAGE_HOME_BEAN_EXPLORED": "Beans Explored",
-  "PAGE_HOME_BEANS_EXPLORED": "Beans Explored",
-  "PAGE_HOME_LAST_BREWS": "Last Brews",
-  "PAGE_HOME_LAST_BREW": "Last Brew",
+  "PAGE_HOME_BEAN_EXPLORED": "Beans explored",
+  "PAGE_HOME_BEANS_EXPLORED": "Beans explored",
+  "PAGE_HOME_LAST_BREWS": "Last brews",
+  "PAGE_HOME_LAST_BREW": "Last brew",
   "PAGE_HOME_DIFFERENT_PREPARATION_METHODS": "Different preparation methods",
   "PAGE_HOME_DIFFERENT_MILLS": "Different grinders",
   "PAGE_HOME_SUPPORTER": "App Supporter",
@@ -61,24 +61,24 @@
   "PAGE_SETTINGS_TRACK_BREW_COORDINATES": "Save brew coordinates",
   "PAGE_SETTINGS_FAST_REPEAT": "Fast brew repeat",
   "PAGE_STATISTICS_DIFFERENT_PREPARATION_METHOD": "Preparation Methods",
-  "PAGE_STATISTICS_TOTAL_GROUND_BEANS": "Ground Beans Total",
-  "PAGE_STATISTICS_MONEY_SPENT_FOR_COFFEE": "Money Spent for Beans",
-  "PAGE_STATISTICS_DRUNKEN_BREWS": "Total Number of Brews",
+  "PAGE_STATISTICS_TOTAL_GROUND_BEANS": "Ground beans total",
+  "PAGE_STATISTICS_MONEY_SPENT_FOR_COFFEE": "Money spent for beans",
+  "PAGE_STATISTICS_DRUNKEN_BREWS": "Total number of brews",
   "PAGE_STATISTICS_BREW_PROCESSES": "Total brews",
-  "PAGE_STATISTICS_DRUNKEN_QUANTITY": "Consumed Quantity",
-  "PAGE_BREW_TEXT_INFORMATION_FROM_ROASTER": "Roaster Information",
+  "PAGE_STATISTICS_DRUNKEN_QUANTITY": "Consumed quantity",
+  "PAGE_BREW_TEXT_INFORMATION_FROM_ROASTER": "Roaster information",
   "PAGE_ABOUT_NO_VERSION_AVAILABLE": "No Version Available",
   "PAGE_ABOUT_APP_VERSION": "App Version",
   "PAGE_LICENCES_WEBSITE": "Website",
   "BEAN_DATA_ROAST_NAME": "Degree of Roast",
-  "BEAN_DATA_CUSTOM_ROAST_NAME": "Custom Degree of Roast",
-  "BEAN_DATA_ROASTING_DATE": "Roasting Date",
+  "BEAN_DATA_CUSTOM_ROAST_NAME": "Custom degree of roast",
+  "BEAN_DATA_ROASTING_DATE": "Roasting date",
   "BEAN_DATA_ROASTER": "Roaster",
   "BEAN_DATA_VARIETY": "Variety",
   "BEAN_DATA_PROCESSING": "Processing",
   "BEAN_DATA_COUNTRY": "Country",
   "BEAN_DATA_MIX": "Blend",
-  "BEAN_DATA_AROMATICS": "Flavor Profile",
+  "BEAN_DATA_AROMATICS": "Flavor profile",
   "BEAN_DATA_WEIGHT": "Weight",
   "BEAN_DATA_COST": "Cost",
   "BEAN_DATA_NAME": "Name",
@@ -87,13 +87,14 @@
   "BEAN_DATA_FARMER": "Farmer",
   "BEAN_DATA_ELEVATION": "Elevation",
   "BEAN_DATA_HARVEST_TIME": "Harvested",
+  "BEAN_DATA_PERCENTAGE": "Percentage",
   "BEAN_DATA_CERTIFICATION": "Bean certification",
   "BEAN_DATA_ROASTING_TYPE": "Roast type",
   "BEAN_DATA_DECAFFEINATED": "Decaffeinated",
   "BEAN_DATA_URL": "Website",
   "BEAN_DATA_EAN": "EAN / Articlenumber",
   "BEAN_DATA_CUPPING_POINTS": "Cupping points",
-  "BREW_DATA_CUSTOM_BREW_TIME": "Custom Brewing Time",
+  "BREW_DATA_CUSTOM_BREW_TIME": "Custom brewing time",
   "BREW_CREATION_DATE": "Creation Date",
   "REPEAT": "Repeat",
   "EDIT": "Edit",
@@ -122,7 +123,7 @@
   "BREW_DATA_GRIND_WEIGHT": "Ground Coffee (gr)",
   "BREW_DATA_IN_OUT_BR": "In/Out (BR)",
   "BREW_DATA_NOTES": "Notes",
-  "BREW_DATA_PREPARATION_METHOD": "Preparation Method",
+  "BREW_DATA_PREPARATION_METHOD": "Preparation method",
   "BREW_DATA_MILL": "Grinder",
   "BREW_DATA_MILL_SPEED": "Grinding Speed (rpm)",
   "BREW_DATA_MILL_TIMER": "Grinding Time",
@@ -132,7 +133,7 @@
   "BREW_DATA_PRESSURE_PROFILE": "Profile",
   "BREW_DATA_COFFEE_TYPE": "Coffee Type",
   "BREW_DATA_COFFEE_CONCENTRATION": "Coffee Concentration",
-  "BREW_DATA_COFFEE_FIRST_DRIP_TIME": "First Coffee Drip",
+  "BREW_DATA_COFFEE_FIRST_DRIP_TIME": "First coffee drip",
   "BREW_DATA_COFFEE_BLOOMING_TIME": "Blooming Time / Preinfusion",
   "BREW_DATA_ATTACHMENTS": "Attachments",
   "BREW_DATA_RATING": "Rating",
@@ -174,24 +175,24 @@
   "ERROR_OCCURED": "An error occurred",
   "CSV_FILE_NOT_DOWNLOADED": "CSV file could not be downloaded!",
   "CSV_FILE_DOWNLOADED_SUCCESSFULLY": "CSV file '{{fileName}}' was successfully downloaded to your download folder!",
-  "ADD_BREW": "Add Brew",
+  "ADD_BREW": "Add brew",
   "CHOOSE": "Choose",
   "CHOOSE_PHOTO_OR_LIBRARY": "Record photo or choose from photo gallery.",
   "RECORD": "Record",
-  "PAGE_BEAN_INFORMATION": "Bean Information",
+  "PAGE_BEAN_INFORMATION": "Bean information",
   "PAGE_BEAN_INFORMATION_GOOD_BREWS": "Good",
   "PAGE_BEAN_INFORMATION_BAD_BREWS": "Bad",
-  "PAGE_BEAN_INFORMATION_COUNT_BREWS": "Total Brews",
+  "PAGE_BEAN_INFORMATION_COUNT_BREWS": "Total brews",
   "INFORMATION": "Information",
   "PAGE_BEAN_BREW_CHART_TITLE": "Brew overview for this bean",
   "PAGE_BEAN_INFORMATION_AWESOME_BREWS": "Awesome",
   "PAGE_BEAN_INFORMATION_NORMAL_BREWS": "Normal",
   "PAGE_BEAN_INFORMATION_NOT_RATED_BREWS": "Not Rated",
   "PAGE_PREPARATION_INFORMATION_BREWS_DONE": "Brews with this preparation method",
-  "PAGE_PREPARATION_INFORMATION_BREWED_QUANTITY": "Brewed Quantity",
-  "PAGE_PREPARATION_INFORMATION_GRIND_WEIGHT": "Consumed Beans Weight",
-  "PAGE_PREPARATION_INFORMATION_TIME_SPENT_BREWING": "Total Brew Time",
-  "PAGE_PREPARATION_INFORMATION": "Preparation Information",
+  "PAGE_PREPARATION_INFORMATION_BREWED_QUANTITY": "Brewed quantity",
+  "PAGE_PREPARATION_INFORMATION_GRIND_WEIGHT": "Consumed beans weight",
+  "PAGE_PREPARATION_INFORMATION_TIME_SPENT_BREWING": "Total brew time",
+  "PAGE_PREPARATION_INFORMATION": "Preparation information",
   "SECONDS": "Seconds",
   "PAGE_MILL_INFORMATION": "Grinder information",
   "PAGE_MILL_INFORMATION_BREWS_DONE": "Brews with this grinder",
@@ -231,19 +232,19 @@
   "CUPPING_SCORE_UNIFORMITY_TOOLTIP": "Uniformity refers to cup-to-cup differences. Dry-process coffees can be less uniform than wet-process coffees by nature. We would never avoid a lot that has fantastic flavors if occasionally it waivers. This is scored during the cupping protocol, where multiple cups are made of each lot being reviewed.",
   "CUPPING_SCORE_CUPPERS_CORRECTION_TOOLTIP": "This is adapted from the SCAA system and Cup of Excellence scoring (they sometimes call it \"Overall Points\"). It allows a cupper to ensure that the total score correctly communicates the overall impression of the cup. You might criticize this approach and consider it \"fudging\" the total. In a way, you would be correct ... but it would be much worse to change the category scores to achieve the desired total (to give a coffee a 9 for acidity when you know it is a 7), or conversely to have a coffee that absolutely deserves a 90 end up at 84. The specific Cupper's Correction number matters naught, be it a 5 or an 8 ... the idea is that the total score gives a correct impression of the coffee quality.",
   "CUPPING_SCORE_TOOLTIP": "100-95 = Astounding, 90-94 = Outstanding, 85-89 = Very Good, 80-84 = Good, 75-79 = Fair, 70-74 = Poor",
-  "DETAIL_BREW": "Brew Details",
-  "EDIT_BREW": "Edit Brew",
-  "ADD_BEAN": "Add Bean",
-  "EDIT_BEAN": "Edit Bean",
-  "ADD_PREPARATION": "Add Preparation Method",
+  "DETAIL_BREW": "Brew details",
+  "EDIT_BREW": "Edit brew",
+  "ADD_BEAN": "Add bean",
+  "EDIT_BEAN": "Edit bean",
+  "ADD_PREPARATION": "Add preparation Method",
   "EDIT_PREPARATION": "Edit preparation Method",
-  "ADD_MILL": "Add Grinder",
-  "EDIT_MILL": "Edit Grinder",
-  "USE_FILTER": "Apply Filter",
-  "RESET_FILTER": "Reset Filter",
-  "COFFEE_GRAMS_GRINDED": "Grams Ground",
-  "BEANS_USED": "Beans Consumed",
-  "BREW_HEADER_BEFORE_BREW": "Before Brewing",
+  "ADD_MILL": "Add grinder",
+  "EDIT_MILL": "Edit grinder",
+  "USE_FILTER": "Apply filter",
+  "RESET_FILTER": "Reset filter",
+  "COFFEE_GRAMS_GRINDED": "Grams grinded",
+  "BEANS_USED": "Beans consumed",
+  "BREW_HEADER_BEFORE_BREW": "Before brewing",
   "BREW_HEADER_WHILE_BREW": "While brewing",
   "BREW_HEADER_AFTER_BREW": "After brewing",
   "BREW_HEADER_CUPPING": "Cupping",
@@ -263,19 +264,19 @@
   "WELCOME_PAGE_ACTIVATE_GOOGLE_ANALYTICS_DESCRIPTION": "I'd like to improve this app continuously. Do you agree that I collect analytical data about your app usage? No personal identifiable information will be collected!",
   "ACTIVATE": "Activate",
   "DO_NOT_ACTIVE": "Don't activate",
-  "WELCOME_PAGE_BEAN_TITLE": "Bean Description",
+  "WELCOME_PAGE_BEAN_TITLE": "Bean description",
   "WELCOME_PAGE_BEAN_DESCRIPTION": "Brewing coffee with beans is kind of tricky. Please add your first bean description to get started!",
-  "WELCOME_PAGE_BEAN_ADD": "Add Bean Description",
+  "WELCOME_PAGE_BEAN_ADD": "Add bean description",
   "SKIP": "Skip",
-  "WELCOME_PAGE_PREPARATION_TITLE": "Preparation Method",
+  "WELCOME_PAGE_PREPARATION_TITLE": "Preparation method",
   "WELCOME_PAGE_PREPARATION_DESCRIPTION": "V60, Aeropress, Porta Filter - there are many ways to prepare coffee. Pleas add at least one.",
-  "WELCOME_PAGE_PREPARATION_ADD": "Add Preparation Method",
+  "WELCOME_PAGE_PREPARATION_ADD": "Add Preparation method",
   "WELCOME_PAGE_MILL_TITLE": "Grinder",
   "WELCOME_PAGE_MILL_DESCRIPTION": "Almost done, but you need something to grind your beans! Please add at least one grinder.",
   "WELCOME_PAGE_MILL_ADD": "Add grinder",
   "WELCOME_PAGE_TITLE": "Welcome!",
-  "WELCOME_PAGE_BEAN_HEADLINE": "First Bean Description",
-  "WELCOME_PAGE_PREPARATION_HEADLINE": "Add Preparation Method",
+  "WELCOME_PAGE_BEAN_HEADLINE": "First bean description",
+  "WELCOME_PAGE_PREPARATION_HEADLINE": "Add preparation method",
   "WELCOME_PAGE_MILL_HEADLINE": "First Grinder",
   "WELCOME_PAGE_LETS_START_HEADLINE": "Now we get going!",
   "WELCOME_PAGE_LETS_START_TITLE": "Now we get going!",
@@ -320,13 +321,13 @@
   "PREPARATION_TYPE_AEROPRESS_INVERTED": "Aeropress Inverted",
   "PREPARATION_TYPE_TURKISH": "Turkish",
   "PREPARATION_TYPE_BLUE_DRIPPER": "Blue Dripper",
-  "PREPARATION_TYPE_ADD_CUSTOM": "Add Custom Method",
-  "CHOOSE_BEANS": "Select Beans",
-  "CHOOSE_BEAN": "Select Bean",
-  "CHOOSE_PREPARATIONS": "Select Preparation Methods",
-  "CHOOSE_PREPARATION": "Select Preparation Method",
-  "CHOOSE_MILLS": "Select Grinders",
-  "CHOOSE_MILL": "Select Grinder",
+  "PREPARATION_TYPE_ADD_CUSTOM": "Add custom method",
+  "CHOOSE_BEANS": "Select beans",
+  "CHOOSE_BEAN": "Select bean",
+  "CHOOSE_PREPARATIONS": "Select preparation methods",
+  "CHOOSE_PREPARATION": "Select preparation method",
+  "CHOOSE_MILLS": "Select grinders",
+  "CHOOSE_MILL": "Select grinder",
   "BEAN": {
     "PLACE_HOLDER": {
       "BEAN_DATA_NAME": "Add name",
@@ -345,6 +346,7 @@
       "BEAN_DATA_FARMER": "Add the farmer",
       "BEAN_DATA_ELEVATION": "In which elevation was the bean grown",
       "BEAN_DATA_HARVEST_TIME": "In which time was the bean harvested?",
+      "BEAN_DATA_PERCENTAGE": "Add the sort percentage",
       "BEAN_DATA_CERTIFICATION": "Add the bean certification (e.g. fair trade, bio)",
       "BEAN_DATA_ROASTING_TYPE": "Add the roast type",
       "BEAN_DATA_DECAFFEINATED": "Is this coffee decaffeinated",
@@ -394,7 +396,7 @@
   "DAYS_OLD": "days old",
   "BEANS_AMOUNT_USED": "Consumed",
   "CUPPING_BREW": "Cupping",
-  "COFFEE_DRUNKEN_QUANTITY": "Coffee Drunk",
+  "COFFEE_DRUNKEN_QUANTITY": "Coffee drunk",
   "IMAGE_DELETED": "Image has been deleted",
   "IMAGE_NOT_DELETED": "Image could not be deleted",
   "EXTERNAL_STORAGE_NOT_SUPPORTED": "Sorry, external story is not supported",
@@ -414,8 +416,27 @@
   "NEXT": "Weiter",
   "UPDATE_TEXT_TITLE_TITLE": {
     "5.0.0": {
-      "TITLE": "Version 5.0: Das ist neu",
-      "DESCRIPTION": "Neues Layout, Neue Zubereitungsmethoden"
+      "TITLE": "Version 5.0: Thats new!",
+      "DESCRIPTION": [
+        "New layout, new icons, new colors, new logo",
+        "New preparation methods",
+        "Preparations now can be categorized (percolation, espresso, full immersion)",
+        "Preparation can now inherit tools (e.g. different filters)",
+        "Preparation parameter can now be customized, define your own workflow for each preparation",
+        "Added more editable bean information, different sorts can now be added",
+        "Amount of water field is available for percolation/full immersion",
+        "Where did you brew your best coffee? Active coordinate saving in settings",
+        "Activate fast repeat to add brews instant",
+        "Added update screen to show the latest changes",
+        "Question added to rate the app after 25 uses",
+        "Added sorting for beans",
+        "Added search panel for brews/beans",
+        "Cupping chart is added to brew details",
+        "Left over beans weight added on homescreen",
+        "Added typeahead for roasters",
+        "Rating moved to stars instead of icons"
+      ]
+
     }
   },
   "CUSTOM_PARAMETERS": "Customize parameter",
@@ -445,5 +466,6 @@
   "BEAN_SORT_NAME_OF_BEAN": "Bean name",
   "BEAN_SORT_ROASTER": "Roaster",
   "BEAN_SORT_ROASTING_DATE": "Roasting date",
-  "PAGE_SETTINGS_MANAGE_ARCHIVE": "Manage archive"
+  "PAGE_SETTINGS_MANAGE_ARCHIVE": "Manage archive",
+  "LAST_USE": "Last used"
 }
