--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,6 +19,7 @@
   "NAV_INFORMATION_TO_APP": "About Beanconqueror",
   "POPOVER_BREWS_OPTION_REPEAT": "Repeat",
   "POPOVER_BREWS_OPTION_DETAIL": "Details",
+  "DETAIL": "Details",
   "POPOVER_BREWS_OPTION_EDIT": "Edit",
   "POPOVER_BREWS_OPTION_DELETE": "Delete",
   "POPOVER_BREWS_OPTION_PHOTO_GALLERY": "Photo Gallery",
@@ -233,6 +234,7 @@
   "CUPPING_SCORE_CUPPERS_CORRECTION_TOOLTIP": "This is adapted from the SCAA system and Cup of Excellence scoring (they sometimes call it \"Overall Points\"). It allows a cupper to ensure that the total score correctly communicates the overall impression of the cup. You might criticize this approach and consider it \"fudging\" the total. In a way, you would be correct ... but it would be much worse to change the category scores to achieve the desired total (to give a coffee a 9 for acidity when you know it is a 7), or conversely to have a coffee that absolutely deserves a 90 end up at 84. The specific Cupper's Correction number matters naught, be it a 5 or an 8 ... the idea is that the total score gives a correct impression of the coffee quality.",
   "CUPPING_SCORE_TOOLTIP": "100-95 = Astounding, 90-94 = Outstanding, 85-89 = Very Good, 80-84 = Good, 75-79 = Fair, 70-74 = Poor",
   "DETAIL_BREW": "Brew details",
+  "DETAIL_BEAN": "Bean details",
   "EDIT_BREW": "Edit brew",
   "ADD_BEAN": "Add bean",
   "EDIT_BEAN": "Edit bean",
@@ -452,6 +454,8 @@
   "ENABLE_PREPARATION_CUSTOM_PARAMETERS": "Use individual parameter",
   "BEAN_ADD_ANOTHER_SORT": "Add another sort",
   "BEAN_SORT": "Sort",
+  "BEAN_SORT_INFORMATION": "Sort information",
+  "BEAN_SORT_MORE_INFORMATION": "More information",
   "NAVIGATE_TO_PREPARATION_METHODS": "Navigate to preparations",
   "PREPARATION_TOOLS": "Preparation tools",
   "PREPARATION_TOOLS_INFORMATION": "Add different baskets for your portafilter. For V60 or Aeropress add e.g. cloth, paper or mesh filters e.g.",
@@ -469,5 +473,9 @@
   "LAST_USE": "Last used",
   "SEARCH": "Search",
   "OVERVIEW": "Overview",
-  "BEAN_HEADER_ADDITIONALE_INFORMATION": "Additional information"
+  "BEAN_HEADER_ADDITIONALE_INFORMATION": "Additional information",
+  "THREE_DEE_TOUCH_ACTION_BREW":"Brew",
+  "THREE_DEE_TOUCH_ACTION_BEAN":"Bean",
+  "THREE_DEE_TOUCH_ACTION_PREPARATION":"Preparation method",
+  "THREE_DEE_TOUCH_ACTION_MILL":"Grinder"
 }
